# ecommerce-app

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT.md  Makefile  PLATFORM_SUMMARY.md  README.md  SECURITY.md  docker-compose.yml  start.sh  stop.sh
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  constitution-compliance.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
docs/: INTEGRATION_TEST_PLAN.md
docs/api/: openapi.yaml
infrastructure/: init-db.sql  init-mongo.js
infrastructure/docker-compose/: docker-compose.yml
infrastructure/kafka/: create-topics.sh  schema-registry-config.json
infrastructure/kong/: kong.yml
infrastructure/rabbitmq/: definitions.json
infrastructure/waf/: modsecurity.conf
observability/: otel-collector-config.yaml
observability/fluentd/: fluentd.conf
observability/jaeger/: jaeger-config.yaml
observability/opensearch/: index-templates.json
observability/prometheus/: prometheus.yml
scripts/: generate-certs.sh  init-vault.sh  seed-data.sh  setup-dev.sh  validate-constitution.sh
services/api-gateway/: Dockerfile  README.md  package.json
services/catalog-service/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/catalog-service/migrations/: 001_init_collections.js
services/catalog-service/src/: config.py  main.py
services/catalog-service/src/api/routes/: categories.py  health.py  products.py  search.py
services/catalog-service/src/infrastructure/: database.py  events.py  search.py
services/catalog-service/src/middleware/: correlation.py  error_handler.py  logging.py  telemetry.py
services/catalog-service/src/models/: __init__.py  category.py  product.py  review.py
services/catalog-service/src/services/: __init__.py  category_service.py  product_service.py  search_service.py
services/payment-service/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/payment-service/migrations/: 001_create_payment_tables.sql
services/payment-service/src/: __init__.py  config.py  main.py
services/payment-service/src/api/routes/: payment_routes.py
services/payment-service/src/database/: connection.py  models.py  repository.py
services/payment-service/src/middleware/: correlation.py  logging.py
services/payment-service/src/models/: payment.py
services/payment-service/src/services/: event_publisher.py  payment_processor.py  payment_service.py
shared/go/otel/: go.mod  (+2 more)
tests/: QUICKSTART.md  README.md  run-tests.sh
(+146 files in other folders)
